[[bin]]
name = "embedded-rs-lora"
path = "src/main.rs"
test = false
doctest = false
bench = false

[lib]
harness = false

[features]
52840 = []

# needed for each integration test
[[test]]
name = "integration"
harness = false

[package]
name = "embedded-rs-lora"
authors = ["Jacob Sjöström <jacsjs-dev@pm.me>"]
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rtic = "1.1.4"
embedded-hal = "1.0.0"
fugit = "0.3.7"
nrf52840-hal = "0.18.0"
rtic-monotonic = "1.0.0"
rtt-target = "0.6.1"
defmt = "0.3.10"
rtic-sync = "1.3.0"
at-commands = "0.5.5"
heapless = "0.8.0"
panic-rtt-target = "0.2.0"

[dev-dependencies]
defmt-rtt = "0.4.1"
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
